--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,7 @@ set(client_srcs  client/client.cpp)
 
 link_libraries("-fPIC -Wl,-Bdynamic")
 link_libraries(pthread)
+link_libraries(sqlite3)
 
 # Server binary
 add_executable(server ${server_srcs})
